# tiny-desk-splitter

./: .containerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODING_STANDARDS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  compose.yaml  download.sh  extract.sh  justfile  package-lock.json  package.json  playwright.config.js
.agents/skills/: github-app
.changeset/: config.json
.claude/: settings.local.json
.claude/agents/: engineering-lead.md
.codex/agents/: engineering-lead.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
concert-downloader/: CLAUDE.md  README.md  download.sh  package-lock.json  package.json
concert-downloader/src/: scraper.rs
concert-tracker/: Cargo.toml
concert-tracker/examples/: make_test_fixture.rs
concert-tracker/frontend/: build.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
concert-tracker/frontend/src/: player.ts  playlists.ts
concert-tracker/frontend/src/api/: client.ts  client.unit.test.ts
concert-tracker/frontend/src/player/: core.ts  core.unit.test.ts  index.ts  mirror.ts
concert-tracker/frontend/src/player/widget/: command.ts  message.ts  model.ts  playAudio.command.test.ts  port.ts  subscription.ts  subscription.unit.test.ts  toggleAudio.command.test.ts  update.story.test.ts  update.ts  videoPanel.command.test.ts  view.scene.test.ts  view.ts  widget.ts
concert-tracker/frontend/src/player/widget/update/: handleHostCommand.ts  helpers.ts
concert-tracker/frontend/src/playlists/: core.ts  index.ts  pages.ts
concert-tracker/frontend/src/playlists/widget/: command.ts  index.ts  message.ts  model.ts  port.ts  subscription.ts  update.story.test.ts  update.ts  view.scene.test.ts  view.ts  widget.ts
concert-tracker/frontend/src/shared/: dom.ts  globals.d.ts  htmx.d.ts  player-api.ts  playlists-api.ts
concert-tracker/frontend/src/splitter/: core.ts  index.ts
concert-tracker/frontend/src/splitter/widget/: command.ts  index.ts  message.ts  model.ts  port.ts  subscription.ts  timeline.ts  update.story.test.ts  update.ts  view.scene.test.ts  view.ts  widget.ts
concert-tracker/migrations/: 0001_init.sql  0002_archive.sql  0003_audit_timestamps.sql  0004_playlists.sql
concert-tracker/src/: archive_import.rs  concert_media.rs  concerts.rs  db.rs  events.rs  import.rs  lib.rs  lifecycle.rs  model.rs  month_walk.rs  normalize.rs  playback.rs  playlist.rs  scan.rs  scrape.rs  split_timestamps.rs  sync.rs  test_control.rs
concert-tracker/src/db/: concerts.rs  connection.rs  failed_jobs.rs  lifecycle.rs  mod.rs  playlists.rs  seeds.rs  settings.rs  split_timestamps.rs  sync.rs  time.rs
concert-tracker/src/jobs/: archive.rs  download.rs  mod.rs  prepare.rs  run.rs  scrape_queue.rs  split.rs  split_library.rs
concert-tracker/src/test_control/: adapter.rs  job_driver.rs  scrape_driver.rs
concert-tracker/src/web/: handlers.rs  mod.rs  openapi.rs
concert-tracker/static/: player.js  playlists.js  splitter.js  style.css
concert-tracker/templates/: concert_card.html  concert_detail.html  concert_playback_tracks.html  delete_confirm.html  detail.html  job_log.html  jobs.html  layout.html  like_button.html  list.html  listen_button.html  playlist_detail.html  playlists.html  row.html  settings.html  track_listen_button.html  tracks.html
concert-tracker/tests/: web_integration.rs
concert-types/: Cargo.toml
doc/: data.md
docs/: backend-persistence.md  concert-split.md  concerts.md  data.md  jobs.md  player.md  playwright.md
e2e/: add-to-playlist-ordering.spec.js  add-to-playlist.spec.js  automate-splitting.spec.js  back-navigation.spec.js  concert-reconstruction.spec.js  delete-track.spec.js  fixtures.js  global-setup.js  interlude-tracks.spec.js  jobs-failed-scrape.spec.js  openapi.spec.js  player-queue.spec.js  playlists.spec.js  request-errors.spec.js  sandbox.js  sidebar-close-resize.spec.js  sidebar.spec.js  splitter.spec.js  stub-splitter.js  sync-player-persistence.spec.js  thumbnails.spec.js
hurl/: README.md  concert_playback.hurl  detail_prepare_notes.hurl  health.hurl  job_chain.hurl  listing_status.hurl  media_files_lifecycle.hurl  media_info_navigation.hurl  media_state_errors.hurl  playlists.hurl  scrape_pending.hurl  split_timestamps_flow.hurl  split_timestamps_state.hurl  test_control_adapter.hurl
js-tests/: player-core.test.ts  playlists-core.test.ts  splitter.test.js  splitter.test.ts  tsconfig.json
live-set-song-splitter/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
live-set-song-splitter/benches/: ocr_benchmark.rs
live-set-song-splitter/benches/fixtures/: frame_100.png_psm6.txt  frame_19.png_psm11.txt  frame_19.png_psm6.txt  frame_19_bw.png.txt  frame_19_bw.png_psm11.txt  frame_19_bw.png_psm6.txt  frame_262.png_psm11.txt  frame_262_bw.png.txt  frame_262_bw.png_psm11.txt  frame_262_bw.png_psm6.txt
live-set-song-splitter/examples/: ab_ocr.rs  ocr_bench.rs  paddle_smoke.rs
live-set-song-splitter/examples/common/: mod.rs
live-set-song-splitter/src/: audio.rs  concert.rs  concert_split.rs  cut.rs  detect.rs  ffmpeg.rs  image.rs  io.rs  lib.rs  main.rs  ocr.rs  ocr_backend.rs  ocr_leptess.rs  ocr_paddle.rs  produce.rs  publication.rs  recover.rs  refine.rs  video.rs
live-set-song-splitter/testdata/: ab_ocr_cases.json  setlists.json
live-set-song-splitter/testdata/blue_back_search/: README.md
scraper/: .gitignore  CLAUDE.md  Cargo.toml  archive-scraper.ts  download.sh  justfile  scraper.ts
scraper/src/: archive_scraper.rs  lib.rs  scraper.rs
scraper/src/tests/: archive_scraper_tests.rs  mod.rs  scraper_tests.rs
scraper/src/tests/fixtures/: musician_singular.html  sample_concert.html
scraper/src/tests/fixtures/failures/: kestheband_artist_spacing.html  musicians_description.html  sample_concert_test.html  sesame_street_musicians.html
scripts/: build-images.sh  check-ci-runs.sh  check-playwright-job.sh  download.sh  extract.sh  hurl-test.js  hurl-test.sh  local-api-get.sh  local-api-request.sh  shellcheck.sh  ts-build.sh  ts-check.sh  ts-lint.sh  ts-test.sh  ts-verify.sh
(+223 files in other folders)
