[workspace]
resolver = "2"
members = ["scraper", "live-set-song-splitter", "concert-tracker", "concert-types"]
# vendor/ocr-rs is a vendored fork used as a path dependency, not a workspace member.
exclude = ["vendor"]

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Optimize for size rather than parallel compilation
panic = "abort"         # Abort on panic in release mode
strip = true            # Strip symbols from binary