[package]
name = "concert-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "concert-db"
path = "src/bin/concert_db.rs"

[[bin]]
name = "concert-web"
path = "src/bin/concert_web.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tiny-desk-scraper = { path = "../scraper" }
which = "7"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
