[package]
name = "concert-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "concert-db"
path = "src/bin/concert_db.rs"

[[bin]]
name = "concert-web"
path = "src/bin/concert_web.rs"

[[bin]]
name = "openapi-dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-livereload = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tiny-desk-scraper = { path = "../scraper" }
concert-types = { path = "../concert-types" }
which = "7"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
regex = "1"
# Pinned exactly: 0.1.4+ require axum ^0.8, but this crate is on axum 0.7.
# Revisit this pin together with any future axum 0.8 migration.
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "=0.1.3"
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }
# Test Control API (see docs/change/2026-07-11-hurl-web-integration-tests.md).
# Only pulled in behind the `test-control` feature — never a default dependency.
jsonrpsee = { version = "0.26.0", features = ["server", "macros"], optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[features]
# Feature-gated Test Control API for Hurl black-box integration tests. Also
# requires an explicit runtime flag, loopback binding, and a debug-build guard
# (see src/test_control.rs) — this feature flag alone does not start it.
test-control = ["dep:jsonrpsee"]
