[package]
name = "live-set-splitter"
version = "0.1.0"
edition = "2021"
authors = ["Audio Analysis Tool <example@example.com>"]
description = "A tool for splitting live music recordings into individual songs"

[lints]
workspace = true

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Audio processing
hound = "3.5"           # WAV file manipulation
rustfft = "6.1"         # Fast Fourier Transform
ndarray = "0.15"        # N-dimensional arrays

# Visualization
plotters = "0.3"        # Plotting library

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"

ffmpeg-next = "8.1.0"

# File system operations
tempfile = "3.8"        # For better temporary file handling
stringmetrics = "2.2.2"
# Only PNG/JPEG are needed (frames are PNG). default-features=false avoids dragging
# in avif(rav1e)/exr/webp and the image `rayon` feature, keeping the normal build lean
# and matching concert-tracker's minimal image config.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.97"
concert-types = { path = "../concert-types" }
unidecode = "0.3.0"
leptess = { version = "0.14", optional = true }

# PaddleOCR engine (optional). Vendored fork of `ocr-rs` (upstream:
# github.com/zibo-chen/rust-paddle-ocr, `next` branch) under vendor/ocr-rs — vendored to
# pin the version and to set its `image` dep to default-features=false (drops the
# avif/rav1e/exr/tiff/gif codec bloat). Its build.rs downloads a prebuilt MNN (no cmake).
# Lib is `ocr_rs` (no clash with our `crate::ocr`).
ocr_rs = { package = "ocr-rs", path = "../vendor/ocr-rs", optional = true }

[features]
default = ["paddle-ocr"]
leptess-ocr = ["leptess"]
paddle-ocr = ["ocr_rs"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ocr_benchmark"
harness = false

[[example]]
name = "paddle_smoke"
required-features = ["paddle-ocr"]

[[example]]
name = "ab_ocr"
required-features = ["leptess-ocr", "paddle-ocr"]

[[example]]
name = "ocr_bench"
required-features = ["leptess-ocr", "paddle-ocr"]

# Optional: for more advanced audio processing
# Note: these are optional and can be added if needed
# symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }