[package]
name = "tiny-desk-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiny_desk_scraper"
path = "src/lib.rs"

[[bin]]
name = "scraper"
path = "src/bin/scraper.rs"

[[bin]]
name = "archive_scraper"
path = "src/bin/archive_scraper.rs"

[[bin]]
name = "save_scrape_failure"
path = "src/bin/save_scrape_failure.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
